mule/src/main/java/mule/v4/dataweave/parser/DataWeaveParser.java
// Generated from src/main/java/mule/v4/dataweave/parser/DataWeave.g4 by ANTLR 4.13.2
package mule.v4.dataweave.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DataWeaveParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, VAR=14, FUNCTION=15, IMPORT=16, 
		NAMESPACE=17, OUTPUT=18, INPUT=19, DW=20, TYPE=21, ASSIGN=22, ARROW=23, 
		BOOLEAN=24, AND=25, OR=26, NOT=27, IF=28, ELSE=29, UNLESS=30, USING=31, 
		AS=32, IS=33, NULL=34, DEFAULT=35, CASE=36, THROW=37, DO=38, FOR=39, YIELD=40, 
		ENUM=41, PRIVATE=42, ASYNC=43, MAP=44, FILTER=45, GROUP_BY=46, SIZE_OF=47, 
		UPPER=48, LOWER=49, REPLACE=50, WITH=51, FROM=52, NOW=53, OPERATOR_EQUALITY=54, 
		OPERATOR_RELATIONAL=55, OPERATOR_MULTIPLICATIVE=56, OPERATOR_ADDITIVE=57, 
		MINUS=58, OPERATOR_RANGE=59, CONCAT=60, IDENTIFIER=61, INDEX_IDENTIFIER=62, 
		VALUE_IDENTIFIER=63, URL=64, MEDIA_TYPE=65, NUMBER=66, BLOCK_COMMENT=67, 
		STRING=68, DATE=69, REGEX=70, DOT=71, DOUBLE_COLON=72, COLON=73, COMMA=74, 
		LCURLY=75, RCURLY=76, LSQUARE=77, RSQUARE=78, LPAREN=79, RPAREN=80, SEPARATOR=81, 
		WS=82, NEWLINE=83, COMMENT=84, STAR=85, AT=86, QUESTION=87;
	public static final int
		RULE_script = 0, RULE_header = 1, RULE_directive = 2, RULE_dwVersion = 3, 
		RULE_outputDirective = 4, RULE_inputDirective = 5, RULE_importDirective = 6, 
		RULE_importSpec = 7, RULE_namespaceDirective = 8, RULE_variableDeclaration = 9, 
		RULE_functionDeclaration = 10, RULE_typeDeclaration = 11, RULE_body = 12, 
		RULE_expression = 13, RULE_operationExpression = 14, RULE_defaultExpression = 15, 
		RULE_implicitLambdaExpression = 16, RULE_inlineLambda = 17, RULE_functionParameters = 18, 
		RULE_functionParameter = 19, RULE_logicalOrExpression = 20, RULE_logicalAndExpression = 21, 
		RULE_equalityExpression = 22, RULE_relationalExpression = 23, RULE_additiveExpression = 24, 
		RULE_additiveOperator = 25, RULE_multiplicativeExpression = 26, RULE_typeCoercionExpression = 27, 
		RULE_formatOption = 28, RULE_unaryExpression = 29, RULE_primaryExpression = 30, 
		RULE_builtInFunction = 31, RULE_grouped = 32, RULE_doBlock = 33, RULE_selectorExpression = 34, 
		RULE_literal = 35, RULE_array = 36, RULE_object = 37, RULE_objectField = 38, 
		RULE_qualifiedIdentifier = 39, RULE_functionCall = 40, RULE_typeExpression = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "header", "directive", "dwVersion", "outputDirective", "inputDirective", 
			"importDirective", "importSpec", "namespaceDirective", "variableDeclaration", 
			"functionDeclaration", "typeDeclaration", "body", "expression", "operationExpression", 
			"defaultExpression", "implicitLambdaExpression", "inlineLambda", "functionParameters", 
			"functionParameter", "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "additiveOperator", "multiplicativeExpression", 
			"typeCoercionExpression", "formatOption", "unaryExpression", "primaryExpression", 
			"builtInFunction", "grouped", "doBlock", "selectorExpression", "literal", 
			"array", "object", "objectField", "qualifiedIdentifier", "functionCall", 
			"typeExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'String'", "'Boolean'", "'Number'", "'Regex'", "'Null'", "'Date'", 
			"'DateTime'", "'LocalDateTime'", "'LocalTime'", "'Time'", "'Period'", 
			"'Object'", "'Any'", "'var'", "'fun'", "'import'", "'ns'", "'output'", 
			"'input'", "'%dw'", "'type'", "'='", "'->'", null, "'and'", "'or'", null, 
			"'if'", "'else'", "'unless'", "'using'", "'as'", "'is'", "'null'", "'default'", 
			"'case'", "'throw'", "'do'", "'for'", "'yield'", "'enum'", "'private'", 
			"'async'", "'map'", "'filter'", "'groupBy'", "'sizeOf'", "'upper'", "'lower'", 
			"'replace'", "'with'", "'from'", "'now'", null, null, null, null, "'-'", 
			"'..'", "'++'", null, "'$$'", "'$'", null, null, null, null, null, null, 
			null, "'.'", "'::'", "':'", "','", "'{'", "'}'", "'['", "']'", "'('", 
			"')'", "'---'", null, null, null, "'*'", "'@'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "VAR", "FUNCTION", "IMPORT", "NAMESPACE", "OUTPUT", "INPUT", 
			"DW", "TYPE", "ASSIGN", "ARROW", "BOOLEAN", "AND", "OR", "NOT", "IF", 
			"ELSE", "UNLESS", "USING", "AS", "IS", "NULL", "DEFAULT", "CASE", "THROW", 
			"DO", "FOR", "YIELD", "ENUM", "PRIVATE", "ASYNC", "MAP", "FILTER", "GROUP_BY", 
			"SIZE_OF", "UPPER", "LOWER", "REPLACE", "WITH", "FROM", "NOW", "OPERATOR_EQUALITY", 
			"OPERATOR_RELATIONAL", "OPERATOR_MULTIPLICATIVE", "OPERATOR_ADDITIVE", 
			"MINUS", "OPERATOR_RANGE", "CONCAT", "IDENTIFIER", "INDEX_IDENTIFIER", 
			"VALUE_IDENTIFIER", "URL", "MEDIA_TYPE", "NUMBER", "BLOCK_COMMENT", "STRING", 
			"DATE", "REGEX", "DOT", "DOUBLE_COLON", "COLON", "COMMA", "LCURLY", "RCURLY", 
			"LSQUARE", "RSQUARE", "LPAREN", "RPAREN", "SEPARATOR", "WS", "NEWLINE", 
			"COMMENT", "STAR", "AT", "QUESTION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DataWeave.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataWeaveParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DataWeaveParser.EOF, 0); }
		public TerminalNode SEPARATOR() { return getToken(DataWeaveParser.SEPARATOR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(DataWeaveParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DataWeaveParser.NEWLINE, i);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
			case FUNCTION:
			case IMPORT:
			case NAMESPACE:
			case OUTPUT:
			case INPUT:
			case DW:
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				header();
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEPARATOR) {
					{
					setState(85);
					match(SEPARATOR);
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (((((_la - 24)) & ~0x3f) == 0 && ((1L << (_la - 24)) & 47416319284364313L) != 0)) {
						{
						setState(86);
						body();
						}
					}

					}
				}

				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(91);
					match(NEWLINE);
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				match(EOF);
				}
				break;
			case BOOLEAN:
			case NOT:
			case IF:
			case NULL:
			case DO:
			case SIZE_OF:
			case UPPER:
			case LOWER:
			case NOW:
			case MINUS:
			case IDENTIFIER:
			case INDEX_IDENTIFIER:
			case VALUE_IDENTIFIER:
			case NUMBER:
			case STRING:
			case DATE:
			case REGEX:
			case LCURLY:
			case LSQUARE:
			case LPAREN:
			case SEPARATOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEPARATOR) {
					{
					setState(99);
					match(SEPARATOR);
					}
				}

				setState(102);
				body();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(103);
					match(NEWLINE);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(DataWeaveParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DataWeaveParser.NEWLINE, i);
		}
		public List<TerminalNode> WS() { return getTokens(DataWeaveParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataWeaveParser.WS, i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				directive();
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(114);
						_la = _input.LA(1);
						if ( !(_la==WS || _la==NEWLINE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(119);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4177920L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveContext extends ParserRuleContext {
		public DwVersionContext dwVersion() {
			return getRuleContext(DwVersionContext.class,0);
		}
		public OutputDirectiveContext outputDirective() {
			return getRuleContext(OutputDirectiveContext.class,0);
		}
		public InputDirectiveContext inputDirective() {
			return getRuleContext(InputDirectiveContext.class,0);
		}
		public ImportDirectiveContext importDirective() {
			return getRuleContext(ImportDirectiveContext.class,0);
		}
		public NamespaceDirectiveContext namespaceDirective() {
			return getRuleContext(NamespaceDirectiveContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DW:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				dwVersion();
				}
				break;
			case OUTPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				outputDirective();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				inputDirective();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				importDirective();
				}
				break;
			case NAMESPACE:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				namespaceDirective();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(129);
				variableDeclaration();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 7);
				{
				setState(130);
				functionDeclaration();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 8);
				{
				setState(131);
				typeDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DwVersionContext extends ParserRuleContext {
		public TerminalNode DW() { return getToken(DataWeaveParser.DW, 0); }
		public TerminalNode NUMBER() { return getToken(DataWeaveParser.NUMBER, 0); }
		public DwVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dwVersion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterDwVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitDwVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitDwVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DwVersionContext dwVersion() throws RecognitionException {
		DwVersionContext _localctx = new DwVersionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dwVersion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(DW);
			setState(135);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputDirectiveContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(DataWeaveParser.OUTPUT, 0); }
		public TerminalNode MEDIA_TYPE() { return getToken(DataWeaveParser.MEDIA_TYPE, 0); }
		public OutputDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterOutputDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitOutputDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitOutputDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputDirectiveContext outputDirective() throws RecognitionException {
		OutputDirectiveContext _localctx = new OutputDirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_outputDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(OUTPUT);
			setState(138);
			match(MEDIA_TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputDirectiveContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(DataWeaveParser.INPUT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DataWeaveParser.IDENTIFIER, 0); }
		public TerminalNode MEDIA_TYPE() { return getToken(DataWeaveParser.MEDIA_TYPE, 0); }
		public InputDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).enterInputDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataWeaveListener ) ((DataWeaveListener)listener).exitInputDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DataWeaveVisitor ) return ((DataWeaveVisitor<? extends T>)visitor).visitInputDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputDirectiveContext inputDirective() throws RecognitionException {
		InputDirectiveContext _localctx = new InputDirectiveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_inputDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(INPUT);
			setState(141);
			match(IDENTIFIER);
			setState(142);
			match(MEDIA_TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
